# python-project-lvl1

./: .flake8  .gitignore  Makefile  README.md  manifest.scm  pyproject.toml
.github/workflows/: lint.yml
brain_games/: cli.py  game.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
